--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
   </head>
-  <body link="black">
+  <body>
     <header>
       <div class="top">
        <h2 class="punchline">Shri Anandpur Trust Charitable Diagnostic Center</h2>
